fix : email body was not visible in mobile view

--- a/styles/EmailList.css
+++ b/styles/EmailList.css
@@ -3,7 +3,7 @@
 .container {
         padding: 1rem;
     margin: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .filter {
